# pixel-art-diffusion

./: .gitignore  README.md  main.py  pyproject.toml
data/: dataset-1024.parquet  dataset-512.parquet
data/cleaned_sprites/: dataset-1024.parquet  dataset-256.parquet  dataset-512.parquet
data/cleaned_sprites/dataset-1024/: dq_sprite_0000.txt  dq_sprite_0001.txt  dq_sprite_0005.txt  dq_sprite_0010.txt  dq_sprite_0013.txt  dq_sprite_0014.txt  dq_sprite_0015.txt  dq_sprite_0020.txt  dq_sprite_0021.txt  dq_sprite_0024.txt  dq_sprite_0025.txt  dq_sprite_0026.txt  dq_sprite_0027.txt  dq_sprite_0028.txt  dq_sprite_0031.txt  dq_sprite_0034.txt  dq_sprite_0037.txt  dq_sprite_0038.txt  (+28 more)
data/cleaned_sprites_v1/: dataset-1024.parquet
inference/: inference.py
lora_conversion/: convert_lora.py
postprocessing/: clean_magenta.py  clean_sprite.py  clean_sprite_v1.py  clean_sprite_v2.py  cut_sprite.py  pixel_detector.py
preprocessing/: add_style_token.py  create_parquet.py  cut_sprites.py  down_scaling.py  label_sprites.py  preprocess.py  sync_datasets.py  test_out.py  upload_hf.py
training/: inference_lora.py  inference_lora_sdxl.py  lora_sdxl.sh  lora_sdxl_v1.sh  lora_sdxl_v2.sh  lora_sdxl_v3.sh  lora_sdxl_v4.sh  lora_sdxl_v5.sh  lora_v1.sh  lora_v2.sh  lora_v3.sh  lora_v4.sh  lora_v5.sh  train_text_to_image_lora.py  train_text_to_image_lora_sdxl.py  upload_hf.py
training/experiments/: lora_sdxl_v1.sh  lora_sdxl_v2.sh  lora_sdxl_v3.sh  lora_sdxl_v4.sh  lora_sdxl_v5.sh  lora_sdxl_v6.sh  lora_v1.sh  lora_v2.sh  lora_v3.sh  lora_v4.sh  lora_v5.sh  lora_v6.sh  lora_v7.sh
(+1564 files in other folders)
