[project]
name = "pixel-art-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers>=0.35.1",
    "groq>=0.31.1",
    "huggingface-hub>=0.35.0",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.25.1",
    "wandb>=0.22.0",
    "datasets>=2.19.1",
    "ftfy",
    "tensorboard",
    "Jinja2",
    "peft==0.17.0",
    "scipy>=1.15.3",
]

[tool.setuptools]
packages = ["preprocessing", "postprocessing", "inference", "training", "lora_conversion"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"